// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CiteAllAction renders with disabled 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={true}
    onClick={[Function]}
    title={
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title="Only up to 1000 results can be exported."
        transitionName="zoom-big-fast"
      >
        <Button
          block={false}
          disabled={true}
          ghost={false}
          htmlType="button"
          loading={false}
        >
          <IconText
            icon={<ForwardRef(ExportOutlined) />}
            text="cite all"
          />
        </Button>
      </Tooltip>
    }
  >
    <MenuItem
      key="x-bibtex"
    >
      BibTeX
    </MenuItem>
    <MenuItem
      key="vnd+inspire.latex.eu+x-latex"
    >
      LaTeX (EU)
    </MenuItem>
    <MenuItem
      key="vnd+inspire.latex.us+x-latex"
    >
      LaTeX (US)
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;

exports[`CiteAllAction renders with less than max citeable records results 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={false}
    onClick={[Function]}
    title={
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
        transitionName="zoom-big-fast"
      >
        <Button
          block={false}
          disabled={false}
          ghost={false}
          htmlType="button"
          loading={false}
        >
          <IconText
            icon={<ForwardRef(ExportOutlined) />}
            text="cite all"
          />
        </Button>
      </Tooltip>
    }
  >
    <MenuItem
      key="x-bibtex"
    >
      BibTeX
    </MenuItem>
    <MenuItem
      key="vnd+inspire.latex.eu+x-latex"
    >
      LaTeX (EU)
    </MenuItem>
    <MenuItem
      key="vnd+inspire.latex.us+x-latex"
    >
      LaTeX (US)
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;

exports[`CiteAllAction renders with loading 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={false}
    onClick={[Function]}
    title={
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
        transitionName="zoom-big-fast"
      >
        <Button
          block={false}
          disabled={false}
          ghost={false}
          htmlType="button"
          loading={true}
        >
          <IconText
            icon={<ForwardRef(ExportOutlined) />}
            text="cite all"
          />
        </Button>
      </Tooltip>
    }
  >
    <MenuItem
      key="x-bibtex"
    >
      BibTeX
    </MenuItem>
    <MenuItem
      key="vnd+inspire.latex.eu+x-latex"
    >
      LaTeX (EU)
    </MenuItem>
    <MenuItem
      key="vnd+inspire.latex.us+x-latex"
    >
      LaTeX (US)
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;
